# filling_scheduler

./: .coveragerc  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ALGORITHM_DESIGN_DOCUMENTATION.md  API_ARCHITECTURE.md  API_FRONTEND_TODO.md  API_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_SUMMARY.md  AUTH_TEST_FIXES_SUMMARY.md  BACKEND_SESSION_SUMMARY.md  BEST_SCHEDULE_VISUALIZATION_PRACTICES.md  CHANGELOG.md  CLI_IMPLEMENTATION_GUIDE.md  CLI_SESSION_9_SUMMARY.md  CODEREVIEW_15OCT.md  Claude_Initial_Review.md  HOW_TO_RUN.md  MANIFEST.in  PROGRESS_REPORT.md  README.md  Restructuring_TODO.md  SCHEDULE_PRESENTATION_METHODS.md  SESSION_SUMMARY_AUTH_FIXES.md  SYSTEM_ARCHITECTURE.md  System_Build_Guide_Dev.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_SUMMARY.md  TEST_SUITE_PROGRESS.md  TEST_SUITE_STATUS.md  TODO_FRONTEND.md  UBUNTU_VM_SETUP.md  bug_report.md  compare_runs.py  config.example.json  config.example.yaml  main.py  (+15 more)
.claude/: settings.local.json
.github/workflows/: tests.yml
docs/: AGENT_DEVELOPMENT_GUIDE.md  AGENT_GUIDE_REVIEW.md  API_GUIDE.md  CALENDAR_VIEW_ENHANCEMENTS.md  COMPARISON_ENDPOINTS_SUMMARY.md  CONFIG_ENDPOINTS_SUMMARY.md  DATABASE_REVIEW.md  GANTT_CHART_PROFESSIONAL_ENHANCEMENTS.md  MYPY_TYPE_CHECKING_STATUS.md  PDF_DOWNLOAD_GUIDE.md  PHASE_1.5_COMPLETION_SUMMARY.md  PHASE_1.5_SUMMARY.md  PHASE_1.5_TEST_RESULTS.md  PHASE_1.6_QUICKSTART.md  PHASE_1.6_WEBSOCKET_DESIGN.md  PHASE_1.7_COMPLETION_SUMMARY.md  PHASE_2.1_COMPLETION_SUMMARY.md  PHASE_2.2_COMPLETION_SUMMARY.md  PHASE_2_COMPLETE_REPORT.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_PROGRESS.md  PROJECT_OVERALL_PROGRESS.md  REPORTING_IMPROVEMENTS.md  SCHEDULE_ENDPOINTS_SUMMARY.md  STRUCTURED_JSON_FORMAT.md  STRUCTURED_JSON_IMPLEMENTATION.md  TODO_guidev_plan.md  UBUNTU_DEPLOYMENT_GUIDE.md  UBUNTU_QUICK_START.md  WEEK1_PROGRESS.md  api_reference.md  configuration.md  examples.md  getting_started.md  index.md  strategies.md  type_checking.md
docs/codereviews/: claude_codereview_13Oct2025.md  router_integration_bugs_13Oct2025.md
examples/: README.md  gen_lots.py  lots.csv  lots_large.csv  structured_json_example.py
filling_scheduler/: .gitignore  README.md  compare_runs.py  main.py  run_comparison.sh
filling_scheduler/examples/: gen_lots.py  lots.csv  lots_large.csv
filling_scheduler/fillscheduler/: compare.py  config.py  heuristics.py  io_utils.py  models.py  reporting.py  scheduler.py  validate.py
filling_scheduler/fillscheduler/strategies/: __init__.py  lpt_pack.py  milp_opt.py
filling_scheduler/output/: report.html  schedule.csv  summary.txt
frontend/: .env.development  .env.example  .env.production  .eslintrc.json  .prettierrc.json  README.md  TESTING.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: auth.ts  client.ts  schedules.ts
frontend/src/contexts/: RealTimeContext.tsx
frontend/src/hooks/: useAuth.ts  useKeyboardShortcuts.ts  useWebSocket.ts
postman/: Filling_Scheduler_API.postman_collection.json  Filling_Scheduler_Dev.postman_environment.json  Filling_Scheduler_Prod.postman_environment.json  README.md
scripts/: README.md  coverage_badge.py  create_admin.py  install_ubuntu.sh  migrate_add_start_time.py
src/fillscheduler/: __init__.py  compare.py  compare_sequences.py  config.py  config_loader.py  io_utils.py  models.py  reporting.py  rules.py  scheduler.py  seq_utils.py  validate.py
tests/: __init__.py  conftest.py
tests/api/: conftest.py
tests/fixtures/: README.md  all_different_types.csv  duplicate_ids.csv  empty_lots.csv  invalid_blank_id.csv  invalid_blank_type.csv  invalid_missing_column.csv  invalid_missing_vials.csv  invalid_negative_vials.csv  large_lots.csv  mixed_types.csv  partial_sequence.csv  priority_lots.csv  same_type_lots.csv  sequence.csv  sequence_alternate_column.csv  simple_lots.csv  single_lot.csv  small_lots.csv  unsorted_lots.csv  varied_sizes.csv
tests/integration/: __init__.py  test_strategies.py
tests/unit/: __init__.py  test_compare.py  test_config_loader.py  test_fixtures.py  test_input_validation.py  test_io_utils.py  test_reporting.py  test_schedule_validation.py  test_seq_utils.py
(+107 files in other folders)
